* Fix: Adjustments to animations en environment. * Fix: Prevents content to "jump" due to scrollbar in desktop mode.

--- a/demo/css/flyPanels.css
+++ b/demo/css/flyPanels.css
@@ -1,20 +1,8 @@
-@-webkit-keyframes fadein {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 0.8; } }
-
 @keyframes fadein {
   0% {
     opacity: 0; }
   100% {
     opacity: 0.8; } }
-
-@-webkit-keyframes fadeout {
-  0% {
-    opacity: 0.8; }
-  100% {
-    opacity: 0; } }
 
 @keyframes fadeout {
   0% {
@@ -54,9 +42,7 @@ html.flypanels-open, body.flypanels-open {
 .flypanels-container .offcanvas {
   margin-top: 50px;
   z-index: 100;
-  transition: -webkit-transform 0.5s;
   transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
   background-color: #c0392b;
   overflow: hidden;
   width: 260px; }
@@ -91,14 +77,10 @@ html.flypanels-open, body.flypanels-open {
     padding-top: 50px;
     -webkit-overflow-scrolling: touch;
     overflow-y: auto;
-    transition: -webkit-transform 0.5s;
     transition: transform 0.5s;
-    transition: transform 0.5s, -webkit-transform 0.5s;
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0); }
+    transform: translate3d(0, 0, 0); }
     .flypanels-container .flypanels-main .flypanels-content .overlay {
-      -webkit-animation: fadein 0.5s;
-              animation: fadein 0.5s;
+      animation: fadein 0.5s;
       background-color: #fff;
       position: absolute;
       top: 0;
@@ -108,13 +90,11 @@ html.flypanels-open, body.flypanels-open {
       z-index: 100;
       opacity: 0.8; }
       .flypanels-container .flypanels-main .flypanels-content .overlay.closing {
-        -webkit-animation: fadeout 0.5s;
-                animation: fadeout 0.5s;
+        animation: fadeout 0.5s;
         opacity: 0; }
 
 .flypanels-container.openleft .flypanels-left {
-  -webkit-transform: translate3d(260px, 0, 0);
-          transform: translate3d(260px, 0, 0);
+  transform: translate3d(260px, 0, 0);
   overflow: hidden;
   width: 260px;
   position: relative; }
@@ -127,12 +107,10 @@ html.flypanels-open, body.flypanels-open {
     overflow: hidden; }
 
 .flypanels-container.openleft.closing .flypanels-left {
-  -webkit-transform: translate3d(0px, 0, 0);
-          transform: translate3d(0px, 0, 0); }
+  transform: translate3d(0px, 0, 0); }
 
 .flypanels-container.openright .flypanels-right {
-  -webkit-transform: translate3d(-260px, 0, 0);
-          transform: translate3d(-260px, 0, 0);
+  transform: translate3d(-260px, 0, 0);
   overflow: hidden;
   width: 260px;
   position: relative; }
@@ -143,8 +121,7 @@ html.flypanels-open, body.flypanels-open {
   overflow: hidden; }
 
 .flypanels-container.openright.closing .flypanels-right {
-  -webkit-transform: translate3d(260px, 0, 0);
-          transform: translate3d(260px, 0, 0); }
+  transform: translate3d(260px, 0, 0); }
 
 .flypanels-topbar a.flypanels-button-left.icon-hamburger {
   padding: 0;
@@ -153,7 +130,6 @@ html.flypanels-open, body.flypanels-open {
   width: 22px;
   height: 22px;
   position: relative;
-  -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
   transition: 0.5s ease-in-out;
   cursor: pointer; }
@@ -164,7 +140,6 @@ html.flypanels-open, body.flypanels-open {
     width: 50%;
     background: #fff;
     opacity: 1;
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
     transition: 0.5s ease-in-out; }
     .flypanels-topbar a.flypanels-button-left.icon-hamburger span:nth-child(even) {
@@ -179,11 +154,9 @@ html.flypanels-open, body.flypanels-open {
       top: 14px; }
 
 .openleft .flypanels-topbar a.flypanels-button-left.icon-hamburger span:nth-child(1), .openleft .flypanels-topbar a.flypanels-button-left.icon-hamburger span:nth-child(6) {
-  -webkit-transform: rotate(45deg);
   transform: rotate(45deg); }
 
 .openleft .flypanels-topbar a.flypanels-button-left.icon-hamburger span:nth-child(2), .openleft .flypanels-topbar a.flypanels-button-left.icon-hamburger span:nth-child(5) {
-  -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg); }
 
 .openleft .flypanels-topbar a.flypanels-button-left.icon-hamburger span:nth-child(1) {
@@ -217,7 +190,6 @@ html.flypanels-open, body.flypanels-open {
   width: 50%;
   background: #fff;
   opacity: 1;
-  -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
   transition: 0.5s ease-in-out; }
   .openleft.closing .flypanels-topbar a.flypanels-button-left.icon-hamburger span:nth-child(even) {
@@ -233,8 +205,7 @@ html.flypanels-open, body.flypanels-open {
 
 .flypanels-topbar {
   transition: all 0.2s cubic-bezier(0.53, 0.54, 0.54, 0.54);
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   width: 100%;
   height: 50px;
   background-color: #c0392b;
@@ -246,8 +217,7 @@ html.flypanels-open, body.flypanels-open {
     color: #fff;
     text-decoration: none;
     font-size: 24px; }
-    .flypanels-topbar a.flypanels-button-left,
-    .flypanels-topbar a.flypanels-button-right {
+    .flypanels-topbar a.flypanels-button-left, .flypanels-topbar a.flypanels-button-right {
       padding: 10px;
       padding-left: 20px;
       padding-right: 20px;
@@ -317,7 +287,7 @@ html.flypanels-open, body.flypanels-open {
     border-right: 1px solid #b8564c;
     width: 200px; }
   .panelcontent nav.flypanels-treemenu ul li.haschildren li.haschildren li div {
-    border-bottom-color: #a94c42; }
+    border-bottom-color: #a94c43; }
     .panelcontent nav.flypanels-treemenu ul li.haschildren li.haschildren li div a {
       background-color: #962d22; }
       .panelcontent nav.flypanels-treemenu ul li.haschildren li.haschildren li div a.link {
@@ -325,7 +295,7 @@ html.flypanels-open, body.flypanels-open {
         width: 260px;
         padding-left: 40px; }
   .panelcontent nav.flypanels-treemenu ul li.haschildren li.haschildren li.haschildren a.link {
-    border-right: 1px solid #a94c42;
+    border-right: 1px solid #a94c43;
     width: 200px; }
   .panelcontent nav.flypanels-treemenu ul li.haschildren li.haschildren li.haschildren li div {
     border-bottom-color: #96443b; }
@@ -401,8 +371,7 @@ html.flypanels-open, body.flypanels-open {
   margin-top: 0;
   margin-bottom: 0;
   overflow: hidden;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   transition: 0.5s ease-in-out; }
 
 .panelcontent nav.flypanels-treemenu li.haschildren.expanded > ul {
@@ -546,16 +515,6 @@ nav.flypanels-iconmenu li a {
       bottom: 30px;
       top: 30px;
       -webkit-animation: spin2 4s infinite; }
-
-@-webkit-keyframes spin {
-  0% { }
-  100% {
-    -webkit-transform: rotate(360deg); } }
-
-@-webkit-keyframes spin2 {
-  0% { }
-  100% {
-    -webkit-transform: rotate(720deg); } }
   .flypanels-container .offcanvas .panelcontent[data-panel="search"] .resultinfo {
     color: #fff;
     font-size: 13px;
